Support multiple quoted font families in Context2D font property.

Currently, it's not possible to specify more than one font family in
Context2D's font property. Also, any family with spaces in its name will
fail to be read, and quoting the name will also fail.

This patch makes it possible to specify several font families as per
the CSS shorthand font property spec, as well as quoting of font
families with spaces in their names.

Task-number: QTBUG-32727

Change-Id: I2bc1f1d2b7f5f8f0519e73f4001b4a8242bb039c
Reviewed-by: Karim Pinter <karim.pinter@digia.com>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@digia.com>